After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 602498 - Crashes when setting cookies for about:blank
Crashes when setting cookies for about:blank
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: API
2.28.x
Other Linux
: Normal critical
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-11-20 12:54 UTC by Gustavo Noronha (kov)
Modified: 2009-11-23 08:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ignore cookies with no domain (3.15 KB, patch)
2009-11-20 13:01 UTC, Gustavo Noronha (kov)
none Details | Review
Don't crash when setting cookie for about:blank (2.98 KB, patch)
2009-11-20 21:19 UTC, Dan Winship
committed Details | Review

Description Gustavo Noronha (kov) 2009-11-20 12:54:01 UTC
In fact, setting cookies for anything that ends up with a NULL uri->host. I am coming from investigating this bug report in WebKit: https://bugs.webkit.org/show_bug.cgi?id=31658

Patch incoming.
Comment 1 Gustavo Noronha (kov) 2009-11-20 13:01:17 UTC
Created attachment 148171 [details] [review]
ignore cookies with no domain
Comment 2 Dan Winship 2009-11-20 21:19:20 UTC
Created attachment 148193 [details] [review]
Don't crash when setting cookie for about:blank

How about this instead? (It avoids even parsing the cookie if we're not
going to keep it.) This adds some new g_return_if_fails(), but they
shouldn't be triggered by anything WebKit is doing; if they are, that's
a bug in my patch.
Comment 3 Adrian Bunk 2009-11-21 06:39:01 UTC
(In reply to comment #2)
> Created an attachment (id=148193) [details] [review]
> Don't crash when setting cookie for about:blank
> 
> How about this instead? (It avoids even parsing the cookie if we're not
> going to keep it.) This adds some new g_return_if_fails(), but they
> shouldn't be triggered by anything WebKit is doing; if they are, that's
> a bug in my patch.

I've checked the different feeds from the various bug reports we have in Liferea that boiled down to this issue, and all work fine (and without running into the g_return_val_if_fail()'s) now.
Comment 4 Dan Winship 2009-11-21 14:33:59 UTC
Attachment 148193 [details] pushed as d9d564b - Don't crash when setting cookie for about:blank
Comment 5 Gustavo Noronha (kov) 2009-11-23 08:38:33 UTC
Much better, thanks! =)