Don't crash when setting cookie for about:blank

https://bugzilla.gnome.org/show_bug.cgi?id=602498